--- a/project/frontend/tribal-treasure/src/styles/adminaddartisan.css
+++ b/project/frontend/tribal-treasure/src/styles/adminaddartisan.css
@@ -13,3 +13,10 @@
     margin-left:14.9%;
     overflow-y: auto; 
   }
+
+  .error {
+    color: red;
+    font-size: 0.9em;
+    margin-top: -5px;
+  }
+  
