--- a/project/frontend/tribal-treasure/src/styles/artisanlogin.css
+++ b/project/frontend/tribal-treasure/src/styles/artisanlogin.css
@@ -192,3 +192,33 @@
 .artisan button:hover {
     background-color: #2c3e9f;
 }
+
+.custom-toast-container {
+    font-family: 'Roboto', sans-serif;
+    width: 20%;
+  }
+  
+  .custom-toast .Toastify__close-button {
+    font-size: 1px; 
+    padding: 1%; 
+    width: 20%;
+  }
+  
+  .password-strength {
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
+  .password-strength.weak {
+    color: red;
+  }
+  
+  .password-strength.moderate {
+    color: orange;
+  }
+  
+  .password-strength.strong {
+    color: green;
+  }
+  
+  
